// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveHeader render: no feature flag store data 1`] = `"<Header deps={{...}} />"`;

exports[`InteractiveHeader render: tabClosed is false 1`] = `
<Header
  deps={
    Object {
      "dropdownClickHandler": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "dropdownActionMessageCreator": undefined,
        "openDebugTools": [Function],
        "openPreviewFeaturesPanelHandler": [Function],
        "openScopingPanelHandler": [Function],
        "openSettingsPanelHandler": [Function],
        "source": undefined,
      },
    }
  }
  farItems={
    <GearOptionsButtonComponent
      deps={
        Object {
          "dropdownClickHandler": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "dropdownActionMessageCreator": undefined,
            "openDebugTools": [Function],
            "openPreviewFeaturesPanelHandler": [Function],
            "openScopingPanelHandler": [Function],
            "openSettingsPanelHandler": [Function],
            "source": undefined,
          },
        }
      }
      featureFlagData={
        Object {
          "test-flag": true,
        }
      }
    />
  }
  items={
    <Switcher
      deps={
        Object {
          "dropdownClickHandler": proxy {
            "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
            "dropdownActionMessageCreator": undefined,
            "openDebugTools": [Function],
            "openPreviewFeaturesPanelHandler": [Function],
            "openScopingPanelHandler": [Function],
            "openSettingsPanelHandler": [Function],
            "source": undefined,
          },
        }
      }
      pivotKey={2}
      styles={
        Object {
          "dropdownClassName": "headerSwitcherDropdown",
          "dropdownOptionClassName": "switcherDropdownOption",
          "switcherClassName": "headerSwitcher",
        }
      }
    />
  }
/>
`;

exports[`InteractiveHeader render: tabClosed is true 1`] = `
<Header
  deps={
    Object {
      "dropdownClickHandler": proxy {
        "___id": "BCDF5CE5-F0DF-40B7-8BA0-69DF395033C8",
        "dropdownActionMessageCreator": undefined,
        "openDebugTools": [Function],
        "openPreviewFeaturesPanelHandler": [Function],
        "openScopingPanelHandler": [Function],
        "openSettingsPanelHandler": [Function],
        "source": undefined,
      },
    }
  }
/>
`;
